# symbion-cognitive-collider

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/symbion_cognitive_collider/: apostles_map.yaml  collider.py  complements.yaml  detect_language.py  utils_hash.py
src/symbion_cognitive_collider.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basis_select.py  test_prompt_lang.py
