[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbion-cognitive-collider"
version = "0.1.1"
description = "Language as an ontological basis switch for Symbion Space."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5",
  "PyYAML>=6.0",
  "langdetect>=1.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
symbion_cognitive_collider = ["*.yaml"]
